@@ -116,6 +116,22 @@ QString keyToString(key_enum key)
 namespace MusEGui {
 
 //---------------------------------------------------------
+//   keyPressEvent
+//---------------------------------------------------------
+
+void LMaster::keyPressEvent(QKeyEvent* e)
+{
+    if (e->key() == Qt::Key_Escape) {
+          close();
+          return;
+          }
+    else {
+        e->ignore();
+        return;
+    }
+}
+
+//---------------------------------------------------------
 //   closeEvent
 //---------------------------------------------------------
 
